# hw3-AsianTonyStark1001

./: Makefile  README.md  ai_documentation.txt  myst.yml
data/: GW150914_data.csv
ligotools/: pyproject.toml
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/ligotools/: utils.py
ligotools/ligotools/tests/: test_readligo.py
ligotools/tests/: test_utils.py
