[build-system]
requires = ["setuptools >= 70", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Ligo Scientific Collaboration (LSC)"},
  { name="Eric Gwon"}
]
description = "Libaries and utilities needed for this HW"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==2.0.*",
    "scipy==1.13.*",
    "h5py==3.12.*",
    "matplotlib==3.9.*"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["ligo", "tools", "tutorial"]
version="0.1.0"
#dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-AsianTonyStark1001"
Issues = "https://github.com/UCB-stat-159-f25/hw3-AsianTonyStark1001/issues"

[tool.setuptools]
packages = ["ligotools"]
